[package]
name = "tarpaulin_fails"
version = "0.1.0"
authors = ["parallels"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cargo]
git = "ssh://git@github.com/rust-lang/cargo.git"
commit = "626f0f40efd32e6b3dbade50cd53fdfaa08446ba"
